Changed static IP address and removed Alert from index file

--- a/data/index.html
+++ b/data/index.html
@@ -73,7 +73,7 @@
       fetch('/toggleLED')
         .then(response => response.text())
         .then(data => {
-          alert(data);
+          // alert(data);
         });
     }
 
