--- a/data/index.html
+++ b/data/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ESP32 Control Panel</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
