Resolved conflicts and merged upstream changes

--- a/data/index.html
+++ b/data/index.html
@@ -564,7 +564,7 @@
     //   });
     // }
 
-    let previousScenes = []; // To keep track of previously fetched scenes
+    // let previousScenes = []; // To keep track of previously fetched scenes
 
 // Function to fetch scenes from the ESP32 and update the dropdown menus
 function fetchScenes() {
